Correct size/alpha for help icon in function inspector (broken in last change for GGB-2395)
git-svn-id: http://dev.geogebra.org/svn/trunk/geogebra@62275 23ce0884-8a58-47d3-bc5c-ddf1cd5b9f9e

--- a/web/src/main/resources/org/geogebra/web/resources/css/web-styles.less
+++ b/web/src/main/resources/org/geogebra/web/resources/css/web-styles.less
@@ -3729,6 +3729,7 @@
 	.functionInspectorMainPanel>.panelRow .gwt-Label {
 		padding: 10px;
 		font-size: 115%;
+		width: calc(100% - 150px);
 	}
 
 	.functionInspectorMainPanel .panelRowIndent .MyToggleButton {
@@ -4479,6 +4480,10 @@
 
 	.menubarSMART .GeoGebraMenuImage.menuImg{
 		opacity:0.54;
+	}
+	
+	.fiButton img {
+		opacity: 0.54;
 	}
 
 }
